Add VGMTag class, to save generic information of a song file. A VGMItem can read it to grab his name, etc.

--- a/src/VGMTrans.vcxproj
+++ b/src/VGMTrans.vcxproj
@@ -232,6 +232,7 @@
     <ClCompile Include="loaders\SNSFLoader.cpp" />
     <ClCompile Include="SynthFile.cpp" />
     <ClCompile Include="VGMMiscFile.cpp" />
+    <ClCompile Include="VGMTag.cpp" />
     <ClCompile Include="windows\aboutdlg.cpp" />
     <ClCompile Include="windows\CollDialog.cpp" />
     <ClCompile Include="windows\DragDropSource.cpp" />
@@ -375,6 +376,7 @@
     <ClInclude Include="RIFFFile.h" />
     <ClInclude Include="SF2File.h" />
     <ClInclude Include="SynthFile.h" />
+    <ClInclude Include="VGMTag.h" />
     <ClInclude Include="windows\aboutdlg.h" />
     <ClInclude Include="windows\BmpBtn.h" />
     <ClInclude Include="windows\CollDialog.h" />
