--- a/src/VGMTrans.vcxproj.filters
+++ b/src/VGMTrans.vcxproj.filters
@@ -573,6 +573,9 @@
     <ClCompile Include="formats\CapcomSnesSeq.cpp">
       <Filter>Source Files\formats\capcomsnes</Filter>
     </ClCompile>
+    <ClCompile Include="formats\CapcomSnesInstr.cpp">
+      <Filter>Source Files\formats\capcomsnes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="windows\aboutdlg.h">
@@ -1038,6 +1041,9 @@
       <Filter>Header Files\formats\capcomsnes</Filter>
     </ClInclude>
     <ClInclude Include="formats\CapcomSnesSeq.h">
+      <Filter>Header Files\formats\capcomsnes</Filter>
+    </ClInclude>
+    <ClInclude Include="formats\CapcomSnesInstr.h">
       <Filter>Header Files\formats\capcomsnes</Filter>
     </ClInclude>
   </ItemGroup>
