Add NinSnesInstr and scanner.
Actually, CapcomSnesInstr is identical to NinSnesInstr. I did not know that.

--- a/src/VGMTrans.vcxproj
+++ b/src/VGMTrans.vcxproj
@@ -218,6 +218,7 @@
     <ClCompile Include="formats\CapcomSnesSeq.cpp" />
     <ClCompile Include="formats\HeartBeatPS1Seq.cpp" />
     <ClCompile Include="formats\HeartBeatPS1SeqScanner.cpp" />
+    <ClCompile Include="formats\NinSnesInstr.cpp" />
     <ClCompile Include="formats\RareSnesInstr.cpp" />
     <ClCompile Include="formats\SNESDSP.cpp" />
     <ClCompile Include="loaders\GSFLoader.cpp" />
@@ -362,6 +363,7 @@
     <ClInclude Include="formats\CapcomSnesSeq.h" />
     <ClInclude Include="formats\HeartBeatPS1Seq.h" />
     <ClInclude Include="formats\HeartBeatPS1SeqScanner.h" />
+    <ClInclude Include="formats\NinSnesInstr.h" />
     <ClInclude Include="formats\RareSnesInstr.h" />
     <ClInclude Include="formats\SNESDSP.h" />
     <ClInclude Include="loaders\GSFLoader.h" />
