--- a/src/VGMTrans.vcxproj
+++ b/src/VGMTrans.vcxproj
@@ -218,6 +218,8 @@
     <ClCompile Include="formats\CapcomSnesSeq.cpp" />
     <ClCompile Include="formats\HeartBeatPS1Seq.cpp" />
     <ClCompile Include="formats\HeartBeatPS1SeqScanner.cpp" />
+    <ClCompile Include="formats\KonamiSnesScanner.cpp" />
+    <ClCompile Include="formats\KonamiSnesSeq.cpp" />
     <ClCompile Include="formats\NinSnesInstr.cpp" />
     <ClCompile Include="formats\RareSnesInstr.cpp" />
     <ClCompile Include="formats\SNESDSP.cpp" />
@@ -363,6 +365,9 @@
     <ClInclude Include="formats\CapcomSnesSeq.h" />
     <ClInclude Include="formats\HeartBeatPS1Seq.h" />
     <ClInclude Include="formats\HeartBeatPS1SeqScanner.h" />
+    <ClInclude Include="formats\KonamiSnesFormat.h" />
+    <ClInclude Include="formats\KonamiSnesScanner.h" />
+    <ClInclude Include="formats\KonamiSnesSeq.h" />
     <ClInclude Include="formats\NinSnesInstr.h" />
     <ClInclude Include="formats\RareSnesInstr.h" />
     <ClInclude Include="formats\SNESDSP.h" />
