--- a/src/VGMTrans.vcxproj.filters
+++ b/src/VGMTrans.vcxproj.filters
@@ -166,6 +166,12 @@
     <Filter Include="Source Files\formats\capcomsnes">
       <UniqueIdentifier>{f30ddbb1-0e1d-48ab-98c7-fdb6a47fb5f5}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\formats\konamisnes">
+      <UniqueIdentifier>{f7c5b1d8-55b1-4e9b-a7ee-a6ea68a28fbb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\formats\konamisnes">
+      <UniqueIdentifier>{b2ea5e95-f02a-4a76-82f4-53e42f235fe8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="windows\aboutdlg.cpp">
@@ -578,6 +584,12 @@
     </ClCompile>
     <ClCompile Include="formats\NinSnesInstr.cpp">
       <Filter>Source Files\formats\ninsnes</Filter>
+    </ClCompile>
+    <ClCompile Include="formats\KonamiSnesScanner.cpp">
+      <Filter>Source Files\formats\konamisnes</Filter>
+    </ClCompile>
+    <ClCompile Include="formats\KonamiSnesSeq.cpp">
+      <Filter>Source Files\formats\konamisnes</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1051,6 +1063,15 @@
     </ClInclude>
     <ClInclude Include="formats\NinSnesInstr.h">
       <Filter>Header Files\formats\ninsnes</Filter>
+    </ClInclude>
+    <ClInclude Include="formats\KonamiSnesFormat.h">
+      <Filter>Header Files\formats\konamisnes</Filter>
+    </ClInclude>
+    <ClInclude Include="formats\KonamiSnesScanner.h">
+      <Filter>Header Files\formats\konamisnes</Filter>
+    </ClInclude>
+    <ClInclude Include="formats\KonamiSnesSeq.h">
+      <Filter>Header Files\formats\konamisnes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
