--- a/src/VGMTrans.vcxproj.filters
+++ b/src/VGMTrans.vcxproj.filters
@@ -591,6 +591,9 @@
     <ClCompile Include="formats\KonamiSnesSeq.cpp">
       <Filter>Source Files\formats\konamisnes</Filter>
     </ClCompile>
+    <ClCompile Include="formats\KonamiSnesInstr.cpp">
+      <Filter>Source Files\formats\konamisnes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="windows\aboutdlg.h">
@@ -1071,6 +1074,9 @@
       <Filter>Header Files\formats\konamisnes</Filter>
     </ClInclude>
     <ClInclude Include="formats\KonamiSnesSeq.h">
+      <Filter>Header Files\formats\konamisnes</Filter>
+    </ClInclude>
+    <ClInclude Include="formats\KonamiSnesInstr.h">
       <Filter>Header Files\formats\konamisnes</Filter>
     </ClInclude>
   </ItemGroup>
