--- a/src/windows/VGMTrans.rc
+++ b/src/windows/VGMTrans.rc
@@ -189,7 +189,7 @@ CAPTION "About"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,130,81,50,14
-    CTEXT           "VGMTrans\n\n(c) Copyright 2002-2014 Mike, VGMTrans Team",IDC_STATIC,25,57,78,32
+    CTEXT           "VGMTrans\n\n(c) Copyright 2002-2015 Mike, VGMTrans Team",IDC_STATIC,25,57,78,32
     ICON            IDR_MAINFRAME,IDC_STATIC,55,26,20,20
     GROUPBOX        "",IDC_STATIC,7,7,115,88
 END
@@ -306,7 +306,7 @@ BEGIN
             VALUE "FileDescription", "VGMTrans"
             VALUE "FileVersion", "1, 0, 0, 1"
             VALUE "InternalName", "VGMTrans"
-            VALUE "LegalCopyright", "Copyright 2012"
+            VALUE "LegalCopyright", "Copyright 2002-2015"
             VALUE "OriginalFilename", "VGMTrans.exe"
             VALUE "ProductName", "VGMTrans"
             VALUE "ProductVersion", "1, 0, 0, 1"
