Add CompileSnesFormat (sequence only)

--- a/src/VGMTrans.vcxproj
+++ b/src/VGMTrans.vcxproj
@@ -218,6 +218,8 @@
     <ClCompile Include="formats\CapcomSnesInstr.cpp" />
     <ClCompile Include="formats\CapcomSnesScanner.cpp" />
     <ClCompile Include="formats\CapcomSnesSeq.cpp" />
+    <ClCompile Include="formats\CompileSnesScanner.cpp" />
+    <ClCompile Include="formats\CompileSnesSeq.cpp" />
     <ClCompile Include="formats\HeartBeatPS1Seq.cpp" />
     <ClCompile Include="formats\HeartBeatPS1SeqScanner.cpp" />
     <ClCompile Include="formats\KonamiSnesInstr.cpp" />
@@ -368,6 +370,9 @@
     <ClInclude Include="formats\CapcomSnesInstr.h" />
     <ClInclude Include="formats\CapcomSnesScanner.h" />
     <ClInclude Include="formats\CapcomSnesSeq.h" />
+    <ClInclude Include="formats\CompileSnesFormat.h" />
+    <ClInclude Include="formats\CompileSnesScanner.h" />
+    <ClInclude Include="formats\CompileSnesSeq.h" />
     <ClInclude Include="formats\HeartBeatPS1Seq.h" />
     <ClInclude Include="formats\HeartBeatPS1SeqScanner.h" />
     <ClInclude Include="formats\KonamiSnesFormat.h" />
