Rename SquSnesSeq again since it is not AKAO parser in fact

--- a/src/VGMTrans.vcxproj
+++ b/src/VGMTrans.vcxproj
@@ -314,8 +314,8 @@
     <ClCompile Include="formats\FFT.cpp" />
     <ClCompile Include="formats\FFTInstr.cpp" />
     <ClCompile Include="formats\FFTScanner.cpp" />
-    <ClCompile Include="formats\AkaoSnesSeq.cpp" />
-    <ClCompile Include="formats\AkaoSnesScanner.cpp" />
+    <ClCompile Include="formats\SuzukiSnesSeq.cpp" />
+    <ClCompile Include="formats\SuzukiSnesScanner.cpp" />
     <ClCompile Include="formats\OrgScanner.cpp" />
     <ClCompile Include="formats\OrgSeq.cpp" />
     <ClCompile Include="formats\NinSnesScanner.cpp" />
@@ -473,9 +473,9 @@
     <ClInclude Include="formats\NinSnesFormat.h" />
     <ClInclude Include="formats\NinSnesScanner.h" />
     <ClInclude Include="formats\NinSnesSeq.h" />
-    <ClInclude Include="formats\AkaoSnesFormat.h" />
-    <ClInclude Include="formats\AkaoSnesScanner.h" />
-    <ClInclude Include="formats\AkaoSnesSeq.h" />
+    <ClInclude Include="formats\SuzukiSnesFormat.h" />
+    <ClInclude Include="formats\SuzukiSnesScanner.h" />
+    <ClInclude Include="formats\SuzukiSnesSeq.h" />
     <ClInclude Include="formats\SegSat.h" />
     <ClInclude Include="formats\SegSatScanner.h" />
     <ClInclude Include="formats\KonamiGXFormat.h" />
