--- a/src/VGMTrans.vcxproj.filters
+++ b/src/VGMTrans.vcxproj.filters
@@ -166,17 +166,17 @@
     <Filter Include="Source Files\formats\konamisnes">
       <UniqueIdentifier>{b2ea5e95-f02a-4a76-82f4-53e42f235fe8}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\formats\akaosnes">
-      <UniqueIdentifier>{478e1111-bacf-4097-a852-5a4c1618e59a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\formats\akaosnes">
-      <UniqueIdentifier>{417fba57-759c-4cd4-9c92-e9907956db05}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Header Files\formats\compilesnes">
       <UniqueIdentifier>{d4ac6a6c-aa64-41c0-884b-1a4b8aacf7c2}</UniqueIdentifier>
     </Filter>
     <Filter Include="Source Files\formats\compilesnes">
       <UniqueIdentifier>{80e1769e-4771-4a33-8f31-741f059d946f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\formats\suzukisnes">
+      <UniqueIdentifier>{417fba57-759c-4cd4-9c92-e9907956db05}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\formats\suzukisnes">
+      <UniqueIdentifier>{478e1111-bacf-4097-a852-5a4c1618e59a}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -600,17 +600,17 @@
     <ClCompile Include="VGMSeqSection.cpp">
       <Filter>Source Files\main</Filter>
     </ClCompile>
-    <ClCompile Include="formats\AkaoSnesSeq.cpp">
-      <Filter>Source Files\formats\akaosnes</Filter>
-    </ClCompile>
-    <ClCompile Include="formats\AkaoSnesScanner.cpp">
-      <Filter>Source Files\formats\akaosnes</Filter>
-    </ClCompile>
     <ClCompile Include="formats\CompileSnesScanner.cpp">
       <Filter>Source Files\formats\compilesnes</Filter>
     </ClCompile>
     <ClCompile Include="formats\CompileSnesSeq.cpp">
       <Filter>Source Files\formats\compilesnes</Filter>
+    </ClCompile>
+    <ClCompile Include="formats\SuzukiSnesSeq.cpp">
+      <Filter>Source Files\formats\suzukisnes</Filter>
+    </ClCompile>
+    <ClCompile Include="formats\SuzukiSnesScanner.cpp">
+      <Filter>Source Files\formats\suzukisnes</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1094,15 +1094,6 @@
     <ClInclude Include="VGMSeqSection.h">
       <Filter>Header Files\main</Filter>
     </ClInclude>
-    <ClInclude Include="formats\AkaoSnesFormat.h">
-      <Filter>Header Files\formats\akaosnes</Filter>
-    </ClInclude>
-    <ClInclude Include="formats\AkaoSnesScanner.h">
-      <Filter>Header Files\formats\akaosnes</Filter>
-    </ClInclude>
-    <ClInclude Include="formats\AkaoSnesSeq.h">
-      <Filter>Header Files\formats\akaosnes</Filter>
-    </ClInclude>
     <ClInclude Include="formats\CompileSnesScanner.h">
       <Filter>Header Files\formats\compilesnes</Filter>
     </ClInclude>
@@ -1111,6 +1102,15 @@
     </ClInclude>
     <ClInclude Include="formats\CompileSnesFormat.h">
       <Filter>Header Files\formats\compilesnes</Filter>
+    </ClInclude>
+    <ClInclude Include="formats\SuzukiSnesFormat.h">
+      <Filter>Header Files\formats\suzukisnes</Filter>
+    </ClInclude>
+    <ClInclude Include="formats\SuzukiSnesScanner.h">
+      <Filter>Header Files\formats\suzukisnes</Filter>
+    </ClInclude>
+    <ClInclude Include="formats\SuzukiSnesSeq.h">
+      <Filter>Header Files\formats\suzukisnes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
