--- a/src/VGMTrans.vcxproj
+++ b/src/VGMTrans.vcxproj
@@ -224,6 +224,8 @@
     <ClCompile Include="formats\CompileSnesSeq.cpp" />
     <ClCompile Include="formats\HeartBeatPS1Seq.cpp" />
     <ClCompile Include="formats\HeartBeatPS1SeqScanner.cpp" />
+    <ClCompile Include="formats\HudsonSnesScanner.cpp" />
+    <ClCompile Include="formats\HudsonSnesSeq.cpp" />
     <ClCompile Include="formats\KonamiSnesInstr.cpp" />
     <ClCompile Include="formats\KonamiSnesScanner.cpp" />
     <ClCompile Include="formats\KonamiSnesSeq.cpp" />
@@ -380,6 +382,9 @@
     <ClInclude Include="formats\CompileSnesSeq.h" />
     <ClInclude Include="formats\HeartBeatPS1Seq.h" />
     <ClInclude Include="formats\HeartBeatPS1SeqScanner.h" />
+    <ClInclude Include="formats\HudsonSnesFormat.h" />
+    <ClInclude Include="formats\HudsonSnesScanner.h" />
+    <ClInclude Include="formats\HudsonSnesSeq.h" />
     <ClInclude Include="formats\KonamiSnesFormat.h" />
     <ClInclude Include="formats\KonamiSnesInstr.h" />
     <ClInclude Include="formats\KonamiSnesScanner.h" />
