Add instrument support for AkaoSnesFormat
Final Fantasy IV is not supported yet :P

--- a/src/VGMTrans.vcxproj
+++ b/src/VGMTrans.vcxproj
@@ -215,6 +215,7 @@
   <ItemGroup>
     <ClCompile Include="BytePattern.cpp" />
     <ClCompile Include="datetime.cpp" />
+    <ClCompile Include="formats\AkaoSnesInstr.cpp" />
     <ClCompile Include="formats\AkaoSnesScanner.cpp" />
     <ClCompile Include="formats\AkaoSnesSeq.cpp" />
     <ClCompile Include="formats\CapcomSnesInstr.cpp" />
@@ -371,6 +372,7 @@
     <ClInclude Include="BytePattern.h" />
     <ClInclude Include="datetime.h" />
     <ClInclude Include="formats\AkaoSnesFormat.h" />
+    <ClInclude Include="formats\AkaoSnesInstr.h" />
     <ClInclude Include="formats\AkaoSnesScanner.h" />
     <ClInclude Include="formats\AkaoSnesSeq.h" />
     <ClInclude Include="formats\CapcomSnesFormat.h" />
